# posthog-cli-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  OUTPUT.md  README.md  ROADMAP.md  install.sh
.claude/: settings.json
.claude/rules/: backlog.md  incremental-delivery.md
.github/workflows/: release.yml
docs/backlog/: _index.md
src/: config.rs  errors.rs  lib.rs  main.rs  output.rs
src/commands/: config.rs  login.rs
tests/: config.rs  login.rs  output.rs
