[package]
name = "posthog-cli-rs"
version = "0.2.0"
edition = "2021"
authors = ["Vlad"]
description = "Unofficial PostHog CLI — manage PostHog projects from the terminal (Rust port)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sapihav/posthog-cli-rs"
keywords = ["posthog", "cli", "analytics", "feature-flags", "experiments"]
categories = ["command-line-utilities"]

[[bin]]
name = "posthog"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
thiserror = "2"
dirs = "5"
open = "5"
rpassword = "7"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
